--- a/index.html
+++ b/index.html
@@ -1,98 +1,104 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <!-- Place favicon.ico in the root directory -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+  </head>
+  <body>
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+    <h1>ZECHARIAH</h1>
+    </br>
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a target="_blank" href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+    <table width="100%">
+      <tr>
+        <td valign="top"><p><a href="index.html">About</a></p>
+        <p>Email: <a href="mailto:zacharyg@usc.edu" target="_blank">zacharyg@usc.edu</a></p>
+        <p>Cell: 2133599697</p>
 
-        <!-- Add your site or application content here -->
-        <h1>ZECHARIAH</h1>
+        <p><span class="section-title">Work</span><br />
+        ----------<br />
+        <a target="_blank" href="http://www.workssys.com/">Works Systems</a><br />
+        <a target="_blank" href="http://spylight.com/">Spylight Solutions, LLC.</a><br />
+        <a target="_blank" href="http://sparksc.org/">Spark SC</a><br />
+        <a target="_blank" href="http://sparksc.org/events/startup-career-fair.html">Startup Career Fair</a><br />
+        <a target="_blank" href="http://zacharyg.github.io/kericular-landing/">Docket</a>
+        
+        <p><span class="section-title">Hardware Projects</span><br />
+        ----------------------------------<br />
+        <a href="sun.html">Ultrasonic Navigation for the Blind</a><br />
+        <a href="brain.html">DIY Brain-Computer Interface</a><br />
 
-        <div class="sidebar-left">
-          <p><a target="_blank" href="about.html">About</a></p>
-          <p>Email: <a target="_blank" href="mailto:zacharyg@usc.edu">zacharyg@usc.edu</a></p>
-          <p>Cell: (213)3599697</p>
+        <p><span class="section-title">Web Projects</span><br />
+        ----------------------<br />
+        <a target="_blank" href="http://texttommy.xyz/">Text Tommy</a><br />
+        <a href="hoot.html">Hoot</a><br />
+        <a target="_blank" href="http://zacharyg.github.io/randomasiandood-website/themysteriousplayone.html">Koden (MVP)</a><br />
 
+        <p><span class="section-title">Art Projects</span><br />
+        ----------------------<br />
+        <a target="_blank" href="https://soundcloud.com/randomasiandood">Pocky Hunter</a><br />
 
-          <h4>Work</h4>
-          <a target="_blank" href="http://www.workssys.com/">Works Systems</a></br>
-          <a target="_blank" href="http://spylight.com/">Spylight Solutions, LLC.</a></br>
-          <a target="_blank" href="http://sparksc.org/">Spark SC</a></br>
-          <a target="_blank" href="http://sparksc.org/events/startup-career-fair.html">Startup Career Fair</a></br>
-          <a target="_blank" href="http://zacharyg.github.io/kericular-landing/">Docket</a>
+      <td width="55%" valign="top"><p align="justify" class="paragraph">Cornhole portland disrupt trust fund kombucha hoodie try-hard leggings. gochujang biodiesel, vice poutine small batch green juice tattooed iPhone meditation fap hashtag pug bespoke. Hella wolf cardigan pour-over master cleanse vegan. 3 wolf moon everyday carry gochujang, asymmetrical deep v shabby chic cardigan celiac bespoke. Intelligentsia listicle taxidermy, PBR&B knausgaard normcore gluten-free YOLO lomo bespoke. Meh fingerstache slow-carb chambray biodiesel green juice. DIY tilde put a bird on it, pitchfork gochujang semiotics chillwave art party meggings hella kickstarter jean shorts 8-bit.</br></br>
 
-          <h4>Hardware Projects</h4>
-          <a target="_blank" href="sun.html">Ultrasonic Navigation for the Blind</a></br>
-          <a target="_blank" href="brain.html">DIY Brain Computer Interface</a>
+      Hoodie four dollar toast umami migas messenger bag chicharrones cardigan, YOLO raw denim dreamcatcher post-ironic asymmetrical 3 wolf moon XOXO DIY. Bicycle rights banjo pour-over PBR&B before they sold out, pork belly shoreditch food truck echo park meh hashtag. 3 wolf moon cliche put a bird on it, heirloom sustainable mumblecore next level bushwick readymade single-origin coffee bespoke banjo cray hashtag. Skateboard plaid cliche leggings marfa. Beard direct trade bitters squid, biodiesel meh YOLO meggings +1 bicycle rights asymmetrical hella 8-bit shabby chic. Trust fund green juice typewriter farm-to-table keffiyeh biodiesel, 90's gastropub mumblecore listicle wayfarers williamsburg craft beer leggings jean shorts. Chillwave selvage vinyl, scenester tofu mlkshk blog hashtag cronut.</p>
 
-          <h4>Web Projects</h4>
-          <a target="_blank" href="hoot.html">Hoot</a></br>
-          <a target="_blank" href="koden.html">Koden</a></br>
-          <a target="_blank" href="http://texttommy.xyz/">Text Tommy</a>
+      <table width="100%">
+        <tr>
+          <td height="432" align="center"><p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p><br />
+          </p>
+          <p>Copyright 2016, Zechariah Guo.</p></td>
+        </tr>
+      </table>
 
-          <h4>Art Projects</h4>
-          <a target="_blank" href="https://soundcloud.com/randomasiandood">Pocky Hunter</a>
+      <p align="justify">&nbsp;</p></td>
+      <td width="3%" valign="top" bordercolor="0"><p>&nbsp;</p>
 
-        </div>
-
-        <div class="sidebar-right">
-          <h4>Other</h4>
-          <a href="video.html">Video</a></br>
-          <a href="https://www.facebook.com/zechariah.guo">Facebook</a></br>
-          <a href="https://www.instagram.com/randomasiandood/">Instagram</a></br>
-          <a href="https://twitter.com/randomasiandood">Twitter</a>
-
-          <h4>Links</h4>
-          <a href="http://genius.com/Fathers-children-dirt-and-grime-lyrics">Song of the Week</a>
-
-        </div>
-
-        <div class="main-section">
-        </div>
-
-        <div class="footer">
-          <p>Copyright 2016, Zechariah Guo.</p>
-        </div>
-
-
-
-
-
-
-
+      <td width="24%" valign="top" bordercolor="0">
 
 
+      <p><span class="section-title">Other</span><br />
+      -----------<br />
+      <a href="video.html">Video</a><br />
+      <a target="_blank" href="https://www.facebook.com/zechariah.guo">Facebook</a><br />
+      <a target="_blank" href="https://instagram.com/randomasiandood/">Instagram</a><br />
+      <a target="_blank" href="https://twitter.com/randomasiandood">Twitter</a></p>
 
+      <p><span class="section-title">Links<br />
+        </span><span class="style17">-----------</br>
+        <a target="_blank" href="http://genius.com/Fathers-children-dirt-and-grime-lyrics">Track of the Week</a></p>
 
-
-
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+      </tr>
+    </table>
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <script>
+    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+    e.src='https://www.google-analytics.com/analytics.js';
+    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+    </script>
+  </body>
 </html>
