--- a/video.html
+++ b/video.html
@@ -47,10 +47,13 @@
         ----------------------<br />
         <a target="_blank" href="https://soundcloud.com/randomasiandood">Pocky Hunter</a><br />
 
-      <td width="55%" valign="top"><p align="justify" class="paragraph">Cornhole portland disrupt trust fund kombucha hoodie try-hard leggings. gochujang biodiesel, vice poutine small batch green juice tattooed iPhone meditation fap hashtag pug bespoke. Hella wolf cardigan pour-over master cleanse vegan. 3 wolf moon everyday carry gochujang, asymmetrical deep v shabby chic cardigan celiac bespoke. Intelligentsia listicle taxidermy, PBR&B knausgaard normcore gluten-free YOLO lomo bespoke. Meh fingerstache slow-carb chambray biodiesel green juice. DIY tilde put a bird on it, pitchfork gochujang semiotics chillwave art party meggings hella kickstarter jean shorts 8-bit.</br></br>
-
-      Hoodie four dollar toast umami migas messenger bag chicharrones cardigan, YOLO raw denim dreamcatcher post-ironic asymmetrical 3 wolf moon XOXO DIY. Bicycle rights banjo pour-over PBR&B before they sold out, pork belly shoreditch food truck echo park meh hashtag. 3 wolf moon cliche put a bird on it, heirloom sustainable mumblecore next level bushwick readymade single-origin coffee bespoke banjo cray hashtag. Skateboard plaid cliche leggings marfa. Beard direct trade bitters squid, biodiesel meh YOLO meggings +1 bicycle rights asymmetrical hella 8-bit shabby chic. Trust fund green juice typewriter farm-to-table keffiyeh biodiesel, 90's gastropub mumblecore listicle wayfarers williamsburg craft beer leggings jean shorts. Chillwave selvage vinyl, scenester tofu mlkshk blog hashtag cronut.</p>
-
+      <td width="55%" valign="top">
+        <iframe src="https://player.vimeo.com/video/145917606" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <p>&nbsp;</p>
+        <iframe src="https://player.vimeo.com/video/140249812" width="500" height="264" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <p>&nbsp;</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/B5MZ-JrmMuo" frameborder="0" allowfullscreen></iframe>
+        
       <table width="100%">
         <tr>
           <td height="432" align="center"><p>&nbsp;</p>
