--- a/index.html
+++ b/index.html
@@ -14,58 +14,46 @@
   </head>
   <body>
 
-    <p align="left" class="style16"><a href="about.html"></a></p>
-<table width="10%" height="21" border="0" align="right">
-  <tr>
-    <td><a href="index.html">Home</a></td>
-  </tr>
-</table>
-<p>&nbsp;</p>
-<p class="style3">ZECHARIAH</p>
-<p>&nbsp;</p>
-<table width="97%" border="0" class="text">
-  <tr bordercolor="0">
-    <td width="20%" valign="top"><p><a href="about.html">About</a></p>
-      <p>Contact Info</p>
-      <p>email:&nbsp;<a href="mailto:zacharyg@usc.edu" target="_blank">zacharyg@usc.edu</a></p>
-      <p>mob. +2133599697</p>
-      <p>skype. Stefan Simchowitz</p>
-      <p><span class="style7"><span class="style15">Consulting&nbsp;</span><br />
-        -------------------------<br />
-        <span class="style9"><a href="departfoundation.html" target="_blank">DepartFoundation&nbsp;</a></a><br />
-        <a href="privateclients.html">Private Clients</a><br />
-        <a href="artistadvisory.html">Artist Advisory&nbsp;</a>&nbsp;<br />
-        <a href="galleryadvisory.html">Gallery Advisory&nbsp;</a><br />
-        <a href="curatorialadvisory.html">Curatorial Advisory&nbsp;&nbsp;</a></a><br />
-      <a href="institutionaladvisory.html">Institutional Advisory</a></a></span></span></p>
-    
-      <p class="style7"><span class="style15">Art Projects&nbsp;</span><br />
-  --------------------<br />
-  <span class="style9"><a href="portugalarte.html">Portugalarte'10        </a><br />
-  <a href="newyorkminute.html" target="_parent">New York Minute</a><a href="http://www.departfoundation.com/site/en/newyorkminute.php" target="_blank"></a></span></p>
-      <p class="style7"><span class="style9"><span class="style15">Fabrication  Projects&nbsp;</span><br />
-------------------------------------------------<br />
-<a href="robertmelee.html">Robert Melee</a><br />
-<a href="olafbreuning.html">Olaf Breuning</a><br />
-<a href="FGRS_LMD.html" target="_parent">Fabien Giraud and Raphael Siboni&nbsp;</a><br />
-<a href="Jonathan Monk.html">Jonathan Monk <br />
-</a></span>
-Justin Lieberman<br />
-Jim Shaw<br />
-Marnie Weber<br />
-Chris Burden<br />
-Piero Golia<br />
-Mustafa Hulusi<br />
-Bless</p>
-      <p>&nbsp;</p></td>
-    <td width="53%" valign="top"><p align="justify" class="style19">Stefan Simchowitz has been involved in the field of creative industries and arts his entire life. He has produced 15 feature films, including the award winning independent movies The House Of Yes and Requiem For a Dream. As a co-founder of MediaVast Inc.   (<a href="http://wireimage.com" target="_blank">wireimage.com</a> and <a href="http://contourphotos.com/" target="_blank">contourphotos.com</a>), the world&rsquo;s leader in celebrity, fashion and other photographic content, he managed and brought together hundreds of artists such as David La Chapelle and Terry Richardson, to a first-class delivery platform for premium photographic imagery.</p>
-    <p align="justify" class="style19">Simchowitz currently specializes as an independent consultant and curator to foundations interested in pursuing the exhibition and expansion of public/private contemporary art and architecture initiatives. His role as a strategic advisor involves the management and oversight of artistic partnerships with curators, artists that enable the exhibition, support and production of art, architecture and large-scale events that engage public audiences. His work with artists, foundations, events and art production has resulted in supporting shows at the Palais De Tokyo, Moca, Kunsthalle Zurich, Public Art Fund NYC, Museum of Contemporary Art in Rome, The Italian Cultural Institute and countless other institutions and galleries. He received a B.A. from Stanford University in California, and attended the American Film Institute in Los Angeles. He currently lives between Los Angeles and New York.</p>
-    <p align="justify" class="style11">&nbsp;</p>
-    <p align="justify" class="style11">&nbsp;</p>
-    <p align="justify" class="style11">&nbsp;</p>
-    <table width="95%" border="0">
+    <p>&nbsp;</p>
+    <h1>ZECHARIAH</h1>
+    <p>&nbsp;</p>
+    <table width="97%">
       <tr>
-        <td height="432" align="center"><p>&nbsp;</p>
+        <td valign="top"><p><a href="index.html">About</a></p>
+        <a href="">Blog</a>
+        <p>Email: <a href="mailto:zacharyg@usc.edu" target="_blank">zacharyg@usc.edu</a></p>
+        <p>Cell: 2133599697</p>
+
+        <p><span class="section-title">Work</span><br />
+        ----------<br />
+        <a target="_blank" href="http://www.workssys.com/">Works Systems</a><br />
+        <a target="_blank" href="http://spylight.com/">Spylight Solutions</a><br />
+        <a target="_blank" href="http://sparksc.org/">Spark SC</a><br />
+        <a target="_blank" href="http://sparksc.org/events/startup-career-fair.html">Startup Career Fair</a><br />
+        <a target="_blank" href="http://zacharyg.github.io/kericular-landing/">Docket</a>
+        
+        <p><span class="section-title">Hardware Projects</span><br />
+        ----------------------------------<br />
+        <a href="sun.html">Ultrasonic Navigation for the Blind</a><br />
+        <a href="brain.html">DIY Brain-Computer Interface</a><br />
+
+        <p><span class="section-title">Web Projects</span><br />
+        ----------------------<br />
+        <a target="_blank" href="http://texttommy.xyz/">Text Tommy</a><br />
+        <a href="hoot.html">Hoot</a><br />
+        <a target="_blank" href="http://zacharyg.github.io/randomasiandood-website/themysteriousplayone.html">Koden (MVP)</a><br />
+
+        <p><span class="section-title">Art Projects</span><br />
+        ----------------------<br />
+        <a target="_blank" href="https://soundcloud.com/randomasiandood">Pocky Hunter</a><br />
+
+      <td width="53%" valign="top"><p align="justify" class="paragraph">Cornhole portland disrupt trust fund kombucha hoodie try-hard leggings. gochujang biodiesel, vice poutine small batch green juice tattooed iPhone meditation fap hashtag pug bespoke. Hella wolf cardigan pour-over master cleanse vegan. 3 wolf moon everyday carry gochujang, asymmetrical deep v shabby chic cardigan celiac bespoke. Intelligentsia listicle taxidermy, PBR&B knausgaard normcore gluten-free YOLO lomo bespoke. Meh fingerstache slow-carb chambray biodiesel green juice. DIY tilde put a bird on it, pitchfork gochujang semiotics chillwave art party meggings hella kickstarter jean shorts 8-bit.</br></br>
+
+      Hoodie four dollar toast umami migas messenger bag chicharrones cardigan, YOLO raw denim dreamcatcher post-ironic asymmetrical 3 wolf moon XOXO DIY. Bicycle rights banjo pour-over PBR&B before they sold out, pork belly shoreditch food truck echo park meh hashtag. 3 wolf moon cliche put a bird on it, heirloom sustainable mumblecore next level bushwick readymade single-origin coffee bespoke banjo cray hashtag. Skateboard plaid cliche leggings marfa. Beard direct trade bitters squid, biodiesel meh YOLO meggings +1 bicycle rights asymmetrical hella 8-bit shabby chic. Trust fund green juice typewriter farm-to-table keffiyeh biodiesel, 90's gastropub mumblecore listicle wayfarers williamsburg craft beer leggings jean shorts. Chillwave selvage vinyl, scenester tofu mlkshk blog hashtag cronut.</p>
+
+      <table width="95%">
+        <tr>
+          <td height="432" align="center"><p>&nbsp;</p>
           <p>&nbsp;</p>
           <p>&nbsp;</p>
           <p>&nbsp;</p>
@@ -76,28 +64,30 @@ Bless</p>
           <p>&nbsp;</p>
           <p>&nbsp;</p>
           <p><br />
-            </p>
-          <p>Copyright 2010, Simchowitz.com, All rights Reserved </p></td>
-      </tr>
-    </table>
-    <p align="justify" class="style11">&nbsp;</p></td>
+          </p>
+          <p>Copyright 2016, Zechariah Guo.</p></td>
+        </tr>
+      </table>
+
+      <p align="justify" class="style11">&nbsp;</p></td>
     <td width="3%" valign="top" bordercolor="0"><p class="style7">&nbsp;</p>
       <p>&nbsp;   </p></td>
-    <td width="24%" valign="top" bordercolor="0"><p class="style7"><span class="style15">Property Development </span><br />
-      -------------------------------------------------------<br />
-      <a href="pinetreeproject.html">Pinetree Project</a><br />
-      <a href="developre.html">Develop Re </a></p>
-      <p><span class="style14">Other</span><br />
-        ----------------<br />
-        <a href="film production.html">Film Production</a><br />
-        <a href="personal photography.html">Personal Photography</a><a href="underconstruction.html"></a><br />
-        <a href="simchowitzcollection.html">Simchowitz Collection</a><a href="underconstruction.html"></a></p>
-      <p><span class="style14">Links<br />
-      </span><span class="style17">---------</span></p>
-      <p>&nbsp;</p></td>
-  </tr>
-</table>
-<p align="center" class="style5">&nbsp;</p>
+      <td width="24%" valign="top" bordercolor="0">
+
+
+      <p><span class="section-title">Other</span><br />
+      -----------<br />
+      <a href="video.html">Video</a><br />
+      <a target="_blank" href="https://www.facebook.com/zechariah.guo">Facebook</a><br />
+      <a target="_blank" href="https://instagram.com/randomasiandood/">Instagram</a><br />
+      <a target="_blank" href="https://twitter.com/randomasiandood">Twitter</a></p>
+
+      <p><span class="section-title">Links<br />
+        </span><span class="style17">-----------</br>
+        <a target="_blank" href="http://genius.com/Fathers-children-dirt-and-grime-lyrics">Track of the Week</a></p>
+
+      </tr>
+    </table>
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
     <script src="js/plugins.js"></script>
