--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,6 +19,7 @@
     <p>&nbsp;</p>
     <h1>ZECHARIAH</h1>
     <p>&nbsp;</p>
+    <div class="sidebar">
     <table width="97%">
       <tr>
         <td valign="top"><p><a href="index.html">About</a></p>
@@ -46,6 +49,7 @@
         <p><span class="section-title">Art Projects</span><br />
         ----------------------<br />
         <a target="_blank" href="https://soundcloud.com/randomasiandood">Pocky Hunter</a><br />
+      </div>
 
       <td width="53%" valign="top"><p align="justify" class="paragraph">Cornhole portland disrupt trust fund kombucha hoodie try-hard leggings. gochujang biodiesel, vice poutine small batch green juice tattooed iPhone meditation fap hashtag pug bespoke. Hella wolf cardigan pour-over master cleanse vegan. 3 wolf moon everyday carry gochujang, asymmetrical deep v shabby chic cardigan celiac bespoke. Intelligentsia listicle taxidermy, PBR&B knausgaard normcore gluten-free YOLO lomo bespoke. Meh fingerstache slow-carb chambray biodiesel green juice. DIY tilde put a bird on it, pitchfork gochujang semiotics chillwave art party meggings hella kickstarter jean shorts 8-bit.</br></br>
 
